--- a/practica.html
+++ b/practica.html
@@ -1,71 +1,84 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <!-- Script de A-Frame versión 1.0.0 -->
-  <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
-  <!-- Script de AR.js con soporte de marcadores + ubicación -->
-  <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
-  <!-- Incluye los scripts locales -->
-  <script src="gesture-detector.js"></script>
-  <script src="gesture-handler.js"></script>
-</head>
+	<head>
+		<!-- script de A-Frane version1 1.0.0 -->
+		<script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
+		<!-- script de AR.JS con soporte de marker + location -->
+		<script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
+		<script src="gesture-detector.js"></script>
+		<script src="gesture-handler.js"></script>
+	</head>
+	<body style="margin : 0px; overflow: hidden">
+		<a-scene embedded arjs="sourceType: webcam; debugUIEnabled:false; detectionMode: mono_and_matrix; matrixCodeType: 3x3"renderer="logarithmicDepthBuffer: true;" vr-mode-ui="enabled: false" gesture-detector 
+id="scene">
+		 <a-assets>
+	         	<a-asset-item id="modelo" src="alambre.glb"></a-asset-item>
+	          	<a-asset-item id="modelo1" src="gas.glb"></a-asset-item>
+	        	<a-asset-item id="modelo2" src="electro.glb"></a-asset-item>
+	
+		        <audio id="sound" src="audo1.mp3" preload="auto"></audio>
+			<audio id="sound1" src="audio2.mp3" preload="auto"></audio>
+		        <audio id="sound2" src="audio3.mp3" preload="auto"></audio>
+      		</a-assets>
 
-<body style="margin: 0; overflow: hidden;">
+			<a-marker id="alambre" type="barcode" value="1" raycaster="objects: .clickable" emitevents="true"
+ cursor="fuse: false; rayOrigin: mouse;">
+			<a-entity gltf-model="#modelo" scale="5 5 5" rotation="-90 0 0" position="0 0 0" class="clickable" gesture-handler soundhandler></a-entity>
+			</a-marker>
 
-  <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;"
-    renderer="logarithmicDepthBuffer: true;"
-    vr-mode-ui="enabled: false" gesture-detector id="scene">
+			
+			<a-marker id="gas" type="barcode" value="2" raycaster="objects: .clickable" emitevents="true"
+ cursor="fuse: false; rayOrigin: mouse;">	
+			<a-entity gltf-model="#modelo1" scale="5 5 5" rotation="-90 0 0" position="0 0 0" class="clickable" gesture-handler soundhandler></a-entity>
+			</a-marker>
 
-    <a-assets>
-      <!-- Carga los recursos, como modelos 3D y sonidos -->
-      <a-asset-item id="modelo" src="gamecube.glb"></a-asset-item>
-      <a-asset-item id="modelo2" src="steamdeck.glb"></a-asset-item>
-      <audio id="sound" src="gamecube.mp3" preload="auto"></audio>
-      <audio id="sound2" src="steam.mp3" preload="auto"></audio>
-    </a-assets>
+			
+      			<a-marker id="electro" type="barcode" value="3" raycaster="objects: .clickable" emitevents="true"
+ cursor="fuse: false; rayOrigin: mouse;">		
+			<a-entity gltf-model="#modelo2" scale="5 5 5" position="0 0 0" class="clickable" gesture-handler soundhandler></a-entity>
+			</a-marker>
 
-    <a-marker id="gamecube" type="barcode" value="7">
-      <a-entity
-        gltf-model="#modelo" scale="0.5 0.5 0.5" rotation="40 85 40" position="0 0 0"
-        class="clickable" gesture-handler soundhandler="sound: #sound" move-object>
-      </a-entity>
-    </a-marker>
 
-    <a-marker id="steam" type="barcode" value="6">
-      <a-entity
-        gltf-model="#modelo2" scale="0.5 0.5 0.5" rotation="180 90 90" position="0 0 0"
-        class="clickable" gesture-handler soundhandler="sound: #sound2" move-object>
-      </a-entity>
-    </a-marker>
+			<a-entity id="audio1" sound="src: #sound" autoplay="false"></a-entity>
+			<a-entity id="audio2" sound="src: #sound1" autoplay="false"></a-entity>
+			<a-entity id="audio3" sound="src: #sound2" autoplay="false"></a-entity>
+		</a-scene>
 
-    <a-entity camera></a-entity>
-  </a-scene>
 
-  <script>
-    AFRAME.registerComponent('move-object', {
-      init: function () {
-        const el = this.el;
-        el.addEventListener('click', function () {
-          const currentPosition = el.getAttribute('position');
-          currentPosition.y += 0.1; // Mueve el objeto 0.1 unidades hacia arriba
-          el.setAttribute('position', currentPosition);
-        });
-      }
-    });
-
-    AFRAME.registerComponent('soundhandler', {
-      schema: {
-        sound: { type: 'selector' }
-      },
-      init: function () {
-        this.el.addEventListener('markerFound', () => {
-          this.data.sound.components.sound.playSound();
-        });
-        this.el.addEventListener('markerLost', () => {
-          this.data.sound.components.sound.pauseSound();
-        });
-      }
-    });
-  </script>
-</body>
+		<script>
+			AFRAME.registerComponent('soundhandler', {
+			tick: function () {
+			var entity = document.querySelector('#audio1');
+			var entity2 = document.querySelector('#audio2');
+			var entity3 = document.querySelector('#audio3');
+			
+			
+			if (document.querySelector('#alambre').object3D.visible == true) {
+			entity2.components.sound.pauseSound();
+			entity3.components.sound.pauseSound();
+			entity.components.sound.playSound();
+			
+			} 
+			else if (document.querySelector('#gas').object3D.visible == true) {
+			entity.components.sound.pauseSound();
+			entity3.components.sound.pauseSound();
+			entity2.components.sound.playSound();
+			
+			}
+			else if (document.querySelector('#electro').object3D.visible == true) {
+			entity2.components.sound.pauseSound();
+			entity.components.sound.pauseSound();
+			entity3.components.sound.playSound();
+			
+			}
+			
+			else{
+			entity.components.sound.pauseSound();
+			entity2.components.sound.pauseSound();
+			entity3.components.sound.pauseSound();
+			 }
+			}
+			});
+		</script>
+	</body>
 </html>
