--- a/practica.html
+++ b/practica.html
@@ -12,7 +12,7 @@
 		<a-scene embedded arjs="sourceType: webcam; debugUIEnabled:false; detectionMode: mono_and_matrix; matrixCodeType: 3x3"renderer="logarithmicDepthBuffer: true;" vr-mode-ui="enabled: false" gesture-detector 
 id="scene">
 		 <a-assets>
-	         	<a-asset-item id="modelo" src="alambre.glb"></a-asset-item>
+	         	<a-asset-item id="modelo" src="gamecube.glb"></a-asset-item>
 	          	<a-asset-item id="modelo1" src="gas.glb"></a-asset-item>
 	        	<a-asset-item id="modelo2" src="electro.glb"></a-asset-item>
 	
